gccida/c3/push_replacement
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/push_replacement/src/reload.c:2014:50: error: must use 'enum' tag to refer to type 'machine_mode'
void  push_replacement( rtx *loc, int reloadnum, machine_mode mode) 
                                                 ^
                                                 enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/push_replacement/src/reload.c:2025:18: error: expected expression
*( machine_mode *)( ( char *)&replacements[0].mode + 3 * v3) = mode; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/push_replacement/src/reload.c:2025:4: error: use of undeclared identifier 'machine_mode'
*( machine_mode *)( ( char *)&replacements[0].mode + 3 * v3) = mode; 
   ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/push_replacement/src/obj/reload.o] Error 1
